apps/manifests/kube-prometheus-stack/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.local.cluster`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-kube-prometheus-prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prom.local.cluster`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
